    urj_tap_cable_find helper.

  * src/cmd/cmd.h, src/cmd/cmd_cmd.c (urj_completion_mayben_add_param_list):
    Add new helper which automatically adds urj_param_list_t for matches.
  * src/cmd/cmd_cable.c (cmd_cable_complete): Use new helper to add cable
    options to possible matches.
  * cmd/cmd_initbus.c (cmd_initbus_complete): Use new helper rather than
    adding parameters ourselves.

2011-06-30  Jie Zhang  <jie.zhang@analog.com>

  * src/cmd/Makefile.am (generated_cmd_list.h): Depend on
    generated_cmd_list.h.stamp.
    (generated_cmd_list.h.stamp): New target.
    (EXTRA_DIST): Add generated_cmd_list.h.stamp.
    (MAINTAINERCLEANFILES): Likewise.

2011-06-30  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/chain.c (urj_tap_chain_connect): Fix param count check with parallel
    cables after the refactorizing into dedicated funcs.  Fix by Steve Tell.

  * src/urjtag.pc.in (Libs.private): Add ftdi/usb libs after they were removed
    from the global LIBS.

  * src/bfin/bfin.c (chain_system_reset): Rewrite to work around known anomalies
    with software reset and Blackfin cores.

  * src/tap/chain.c (urj_tap_cable_wait): Fix off-by-one error in previous wait
    logic tweaking.

2011-06-29  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable.c (urj_tap_cable_wait): Tweak code style to silence warnings
    thrown up by gcc-4.6 and cause build failures with -Werror.

  * src/cmd/Makefile.am (generated_cmd_list.h): Always update the file to
    avoid constant generation loops where other files are newer, but not
    a different list of commands.

  * src/cmd/cmd_bfin.c (cmd_bfin_run): Make sure the part is in emulation mode
    first before attempting a reset (since we need to be).

  * src/cmd/cmd_bfin.c (cmd_bfin_help): Update help description to include
    all of the sub-commands actually supported.  Pull out the const strings
    (things you actually type) out of the translated string.
